L11 Enhanced code, made it more readable.